--- a/etape04.html
+++ b/etape04.html
@@ -1,11 +1,59 @@
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title> Beely </title>
+      <link rel="stylesheet" href="styles/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+  </head>
+  <body>
 
-Etape 04
 
-<video playsinline controls poster="video/bee-video01.jpeg" id="video">
-    <source src="video/bee-video04.webm" type="video/webm">
+
+
+    <ul>
+
+          <div class="comp-section-content">
+          <div class="titre"> <a href="index.html">  <img src="images/beely.jpg" alt="" width="90"></a>     </div>
+
+
+        <div class="comp-section-content">
+        <div class="orange"> <a href="etape01.html">Départ de la ruche </a>     </div>
+
+
+
+        <div class="comp-section-content">
+        <div class="bleu"><a href="etape02.html">Trouver une fleur</a> </div>
+
+
+          <div class="comp-section-content">
+          <div class="jaune"><a href="etape03.html">Butinage</a></div>
+
+
+            <div class="comp-section-content">
+            <div class="gris"> <a href="etape04.html">Retour à la ruche</a></div>
+
+
+
+    </ul>
+
+
+
+
+
+
+   <div class="fondgris">
+
+
+
+<video playsinline controls poster="" id="video">
     <source src="video/bee-video04.mp4" type="video/mp4">
 </video>
 
 
 
-<a href="index.html"> ACCUEIL</a>
+
+
+</div>
+
+  </body>
+</html>
