--- a/index.html
+++ b/index.html
@@ -2,32 +2,52 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title> BZZ BZZ </title>
+    <title> Beely </title>
       <link rel="stylesheet" href="styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
   </head>
   <body>
 
-    L’histoire de
-la pollinisation
-de l’abeille
-
-
 
 
 
 <ul>
-  <li>
 
-<a href="etape01.html">Etape 01</a>
-<a href="etape02.html">Etape 02</a>
-<a href="etape03.html">Etape 03</a>
-<a href="etape04.html">Etape 04</a>
+      <div class="comp-section-content">
+      <div class="titre"> <a href="index.html">  <img src="images/beely.jpg" alt="" width="90"></a>     </div>
 
 
-  </li>
+    <div class="comp-section-content">
+    <div class="orange"> <a href="etape01.html">Départ de la ruche </a>     </div>
+
+
+
+    <div class="comp-section-content">
+    <div class="bleu"><a href="etape02.html">Trouver une fleur</a> </div>
+
+
+      <div class="comp-section-content">
+      <div class="jaune"><a href="etape03.html">Butinage</a></div>
+
+
+        <div class="comp-section-content">
+        <div class="gris"> <a href="etape04.html">Retour à la ruche</a></div>
+
+
+
 </ul>
 
+
+   <div class="fondbeige">
+
+
+
+<img src="images/pageaccueil.jpg" alt=""width="1200" >
+
+
+
+
+   </div>
 
 
 
